added auth state

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
   get_it: ^8.0.3
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
