--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^8.0.3
   another_flushbar: ^1.12.30
   dotted_border: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
