--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   another_flushbar: ^1.12.30
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
