--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   uuid: ^4.5.1
   intl: ^0.20.2
+  internet_connection_checker_plus: ^2.7.0
 
 dev_dependencies:
   flutter_test:
